:hammer: Apply conditions in tox.ini

--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -2,20 +2,26 @@
 isolated_build = True
 envlist = py{{ "".join(cookiecutter.python_requires.split(".")[:2]) }}, flake8
 
-[travis]
+{% if cookiecutter.use_travis|lower == 'y' -%}[travis]
 python =
-    {{ cookiecutter.python_requires }}: py{{ "".join(cookiecutter.python_requires.split(".")[:2]) }}
+    {{ cookiecutter.python_requires }}: py{{ "".join(cookiecutter.python_requires.split(".")[:2]) }}{%- endif %}
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-     poetry
+    {% if cookiecutter.use_poetry|lower == 'y' or cookiecutter.use_poetry|lower == 'Y/n' -%}poetry{%- endif %}
 commands =
-    pip install --upgrade pip
-    poetry install
-    poetry run flake8 snakypy/
-		poetry run isort --profile black . --check-only
-    poetry run black snakypy/ --check
-    poetry run mypy snakypy/
-    poetry run pytest --basetemp={envtmpdir} -c pyproject.toml
+    pip install --upgrade pip{% if cookiecutter.use_poetry|lower != 'y' or cookiecutter.use_poetry|lower != 'Y/n' -%}
+		poetry install
+    poetry run flake8 snakypy/{% if cookiecutter.use_isort|lower == 'y' -%}
+		poetry run isort --profile black . --check-only{%- endif %}
+    poetry run black snakypy/ --check{% if cookiecutter.use_mypy|lower == 'y' -%}
+    poetry run mypy snakypy/{%- endif %}
+		poetry run pytest --basetemp={envtmpdir} -c pyproject.toml{%- else %}
+		python -m pip install -r requirements.txt
+		flake8 snakypy/
+		isort --profile black . --check-only
+		black snakypy/ --check
+		mypy snakypy/
+		pytest --basetemp={envtmpdir}{%- endif %}
