:hammer: Apply conditions in tox.ini

--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -10,9 +10,10 @@ python =
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-    {% if cookiecutter.use_poetry|lower == 'y' or cookiecutter.use_poetry|lower == 'Y/n' -%}poetry{%- endif %}
+    {% if cookiecutter.use_poetry|lower == 'y' or cookiecutter.use_poetry == 'Y/n' -%}poetry{%- endif %}
 commands =
-    pip install --upgrade pip{% if cookiecutter.use_poetry|lower != 'y' or cookiecutter.use_poetry|lower != 'Y/n' -%}
+    pip install --upgrade pip
+		{% if cookiecutter.use_poetry|lower != 'y' or cookiecutter.use_poetry != 'Y/n' -%}
 		poetry install
     poetry run flake8 snakypy/{% if cookiecutter.use_isort|lower == 'y' -%}
 		poetry run isort --profile black . --check-only{%- endif %}
