:hammer: Apply conditions in tox.ini

--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -15,14 +15,19 @@ commands =
     pip install --upgrade pip
 		{% if cookiecutter.use_poetry|lower != 'y' or cookiecutter.use_poetry != 'Y/n' -%}
 		poetry install
-    poetry run flake8 snakypy/{% if cookiecutter.use_isort|lower == 'y' -%}
-		poetry run isort --profile black . --check-only{%- endif %}
-    poetry run black snakypy/ --check{% if cookiecutter.use_mypy|lower == 'y' -%}
-    poetry run mypy snakypy/{%- endif %}
+    poetry run flake8 snakypy/
+		{% if cookiecutter.use_isort|lower == 'y' -%}
+		poetry run isort --profile black . --check-only
+		{%- endif %}
+    poetry run black snakypy/ --check
+		{% if cookiecutter.use_mypy|lower == 'y' -%}
+    poetry run mypy snakypy/
+		{%- endif %}
 		poetry run pytest --basetemp={envtmpdir} -c pyproject.toml{%- else %}
 		python -m pip install -r requirements.txt
 		flake8 snakypy/
 		isort --profile black . --check-only
 		black snakypy/ --check
 		mypy snakypy/
-		pytest --basetemp={envtmpdir}{%- endif %}
+		pytest --basetemp={envtmpdir}
+		{%- endif %}
