:hammer: Formatting code

--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 isolated_build = True
-envlist = py{{ "".join(cookiecutter.python_requires.split(".")[:2]) }}, flake8
+envlist = py{{ "".join(cookiecutter.python_requires.split(".")[:2]) }}, flake8{% if cookiecutter.use_travis|lower == 'y' -%}
 
-{% if cookiecutter.use_travis|lower == 'y' -%}[travis]
+[travis]
 python =
     {{ cookiecutter.python_requires }}: py{{ "".join(cookiecutter.python_requires.split(".")[:2]) }}{%- endif %}
 
@@ -12,22 +12,16 @@ setenv =
 deps =
     {% if cookiecutter.use_poetry|lower == 'y' or cookiecutter.use_poetry == 'Y/n' -%}poetry{%- endif %}
 commands =
-    pip install --upgrade pip
-		{% if cookiecutter.use_poetry|lower != 'y' or cookiecutter.use_poetry != 'Y/n' -%}
-		poetry install
-    poetry run flake8 snakypy/
-		{% if cookiecutter.use_isort|lower == 'y' -%}
-		poetry run isort --profile black . --check-only
-		{%- endif %}
-    poetry run black snakypy/ --check
-		{% if cookiecutter.use_mypy|lower == 'y' -%}
-    poetry run mypy snakypy/
-		{%- endif %}
-		poetry run pytest --basetemp={envtmpdir} -c pyproject.toml{%- else %}
-		python -m pip install -r requirements.txt
-		flake8 snakypy/
-		isort --profile black . --check-only
-		black snakypy/ --check
-		mypy snakypy/
-		pytest --basetemp={envtmpdir}
-		{%- endif %}
+    pip install --upgrade pip{% if cookiecutter.use_poetry|lower == 'y' or cookiecutter.use_poetry == 'Y/n' -%}
+    poetry install
+    poetry run flake8 snakypy/{% if cookiecutter.use_isort|lower == 'y' -%}
+    poetry run isort --profile black . --check-only{%- endif %}
+    poetry run black snakypy/ --check{% if cookiecutter.use_mypy|lower == 'y' -%}
+    poetry run mypy snakypy/{%- endif %}{% if cookiecutter.use_pytest|lower == 'y' -%}
+    poetry run pytest --basetemp={envtmpdir} -c pyproject.toml{%- endif %}{%- else %}
+    python -m pip install -r requirements.txt
+    flake8 snakypy/{% if cookiecutter.use_isort|lower == 'y' -%}
+    isort --profile black . --check-only{%- endif %}
+    black snakypy/ --check{% if cookiecutter.use_mypy|lower == 'y' -%}
+    mypy snakypy/{%- endif %}{% if cookiecutter.use_pytest|lower == 'y' -%}
+    pytest --basetemp={envtmpdir}{%- endif %}{%- endif %}
